# ElectronicsInventory

./: .copier-answers.yml  .env.example  .env.test  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Jenkinsfile  Jenkinsfile.architecture  LICENSE  README.md  alembic.ini  pyproject.toml  run-pgadmin.sh  run.py  vulture_whitelist.py  wsgi.py
.claude/: settings.local.json
.claude/agents/: code-writer.md
.llmbox/: docker-compose.yml
alembic/: env.py
alembic/versions/: 002_create_box_location_tables.py  003_create_parts_tables.py  004_add_document_tables.py  005_add_extended_part_fields.py  006_add_manufacturer_fields.py  007_increase_voltage_rating_length.py  008_add_pin_pitch_input_output_voltage_fields.py  009_add_dashboard_performance_index.py  010_remove_attachment_metadata.py  011_create_sellers_table.py  012_cleanup_empty_strings_to_null.py  (+19 more)
app/: __init__.py  app.py  app_config.py  cli.py  config.py  consts.py  database.py  exceptions.py  extensions.py  startup.py
docs/: api_error_reporting.md  copier_approach.md  copier_template_analysis.md  ei_copier_refactoring.md  features.md  task_system_usage.md  technical_design.md
patches/: openai-replace-jiter.patch
scripts/: args.sh  initialize-sqlite-database.sh  run-integration-test.sh  testing-daemon-ctl.sh  testing-server.sh
test_data/: esp32-s3.json  hlk-pm24.json
tests/: __init__.py  conftest.py  conftest_infrastructure.py  domain_fixtures.py  test_ai_part_analysis_schema.py  test_ai_part_analysis_task.py  test_ai_part_cleanup_task.py  test_ai_parts_api.py  test_ai_parts_cleanup_api.py  test_ai_service.py  test_ai_service_real_integration.py  test_base_task.py  test_box_api.py  test_box_service.py  test_capacity_validation.py  test_cas_image_service.py  test_claude_runner.py  test_cli.py  test_config.py  test_connection_manager.py  test_database_constraints.py  test_database_upgrade.py  test_datasheet_extraction.py  test_document_api.py  test_document_fixtures.py  test_document_integration.py  test_document_service.py  test_download_cache_service.py  test_duplicate_search_service.py  test_empty_string_normalization.py  test_error_handling.py  test_file_parsers.py  test_graceful_shutdown.py  test_graceful_shutdown_integration.py  test_health.py  test_health_api.py  test_html_document_handler.py  test_image_service.py  test_inventory_api.py  test_inventory_service.py  (+27 more)
tools/: __init__.py
(+537 files in other folders)
